src/objects/Account_Identifier__c.object
<CustomObject>
    <fields>
        <fullName>Account_Business_Role_SFID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field primarily indicates if it is a Grower or a Dealer and the brand if applicable.</description>
        <label>Account Business Role</label>
        <referenceTo>Account_Business_Role__c</referenceTo>
        <relationshipLabel>Account Identifiers</relationshipLabel>
        <relationshipName>Account_Identifiers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Id__c</fullName>
        <formula>Account_SFID__c</formula>
        <label>Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_SFID__c</fullName>
        <description>Account to which the Identifier maps to</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Identifiers</relationshipLabel>
        <relationshipName>Account_Identifiers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Archive_Date__c</fullName>
        <label>Archive Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Archive_Ind__c</fullName>
        <defaultValue>&quot;N&quot;</defaultValue>
        <label>Archive Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logical_Compositiion_Key__c</fullName>
        <description>Should be a combination of AccountID, Source System, Source System ID and ABR</description>
        <externalId>true</externalId>
        <label>Logical Compositiion Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Source_System_Descr__c</fullName>
        <description>Source system for the farming data</description>
        <label>Source System</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System_ID__c</fullName>
        <description>Unique identifier fro an account from the source system</description>
        <externalId>true</externalId>
        <label>Identifier</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Account Identifier</label>
    <nameField>
        <label>Account Identifier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Identifiers</pluralLabel>
    <recordTypes>
        <fullName>Account_Identifier_Business_Role</fullName>
        <active>true</active>
        <description>The record type is for Account Identifier&apos;s Business Role</description>
        <label>Business Role</label>
    </recordTypes>
    <recordTypes>
        <fullName>Account_Identifier_Default</fullName>
        <active>true</active>
        <description>Default Record Type</description>
        <label>Account Identifier</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Account_Identifier_Exist_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>Account_SFID__r.Has_Account_Identifier__c = True</errorConditionFormula>
        <errorMessage>Account Identifier already existing for Account.</errorMessage>
    </validationRules>
</CustomObject>